--- a/InOutManagement/InOutManagement/Base.lproj/Main.storyboard
+++ b/InOutManagement/InOutManagement/Base.lproj/Main.storyboard
@@ -108,7 +108,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pUm-Dq-oIh">
-                                <rect key="frame" x="67" y="189" width="280" height="633"/>
+                                <rect key="frame" x="67" y="189" width="280" height="563"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="280" id="WMK-9m-ehf"/>
                                 </constraints>
@@ -143,14 +143,23 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vh9-46-nJt">
+                                <rect key="frame" x="103" y="792" width="208" height="30"/>
+                                <state key="normal" title="현재 Wi-Fi를 Home Wi-Fi로 추가"/>
+                                <connections>
+                                    <action selector="buttonAddHomeWifi:" destination="Ija-xX-CcI" eventType="touchUpInside" id="hNz-GE-Pog"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="pUm-Dq-oIh" firstAttribute="centerX" secondItem="bql-go-ffU" secondAttribute="centerX" id="6Ih-Dk-R0W"/>
+                            <constraint firstItem="3jd-g6-LtS" firstAttribute="bottom" secondItem="Vh9-46-nJt" secondAttribute="bottom" constant="40" id="ISu-Bh-BJd"/>
                             <constraint firstItem="pUm-Dq-oIh" firstAttribute="top" secondItem="Tnx-bm-lcE" secondAttribute="bottom" constant="40" id="Iti-DP-nPl"/>
-                            <constraint firstItem="3jd-g6-LtS" firstAttribute="bottom" secondItem="pUm-Dq-oIh" secondAttribute="bottom" constant="40" id="k0w-s1-e0h"/>
+                            <constraint firstItem="Vh9-46-nJt" firstAttribute="top" secondItem="pUm-Dq-oIh" secondAttribute="bottom" constant="40" id="RlU-LH-PJr"/>
                             <constraint firstItem="Tnx-bm-lcE" firstAttribute="centerX" secondItem="bql-go-ffU" secondAttribute="centerX" id="oYl-rO-gso"/>
                             <constraint firstItem="Tnx-bm-lcE" firstAttribute="top" secondItem="3jd-g6-LtS" secondAttribute="top" constant="40" id="rLU-dg-AT1"/>
+                            <constraint firstItem="Vh9-46-nJt" firstAttribute="centerX" secondItem="bql-go-ffU" secondAttribute="centerX" id="yfz-kX-AAV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="3jd-g6-LtS"/>
                     </view>
